# Filters

./: .gitignore  CMakeLists.txt
source/: HighPassFilter.cpp  HighPassFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
